# gerdusx

./: .gitignore  README.md
Rust/Projects/CodeCrafters/Build-your-own-redis/: README.md
Rust/Projects/CodeCrafters/Build-your-own-redis/src/: main.rs
Rust/Projects/todo-cli/: .cursorrules
Rust/Projects/todo-cli/src/: main.rs
Solana/Projects/calculator/: Anchor.toml  README.md
Solana/Projects/calculator/programs/calculator/src/: lib.rs
Solana/Projects/calculator/tests/: calculator.ts
Solana/Projects/voting/: package-lock.json
Solana/Projects/voting/anchor/tests/: voting.spec.ts
Solana/RareSkills/day_02/: Anchor.toml
Solana/RareSkills/day_02/programs/day_02/src/: lib.rs
Solana/RareSkills/day_02/tests/: day_02.ts
Solana/RareSkills/day_04/: Anchor.toml
Solana/RareSkills/day_04/programs/day_04/src/: lib.rs
Solana/RareSkills/day_04/tests/: day_04.ts
Solana/Trident/hello_world/: .gitignore  Anchor.toml  package-lock.json
Solana/Trident/hello_world/programs/hello_world/: Cargo.toml
Solana/Trident/hello_world/programs/hello_world/src/: lib.rs
Solana/Trident/hello_world/trident-tests/fuzz_tests/: Cargo.toml
Solana/Trident/unchecked_arithmetic_0/: Anchor.toml  Trident.toml
Solana/Trident/unchecked_arithmetic_0/programs/unchecked_arithmetic_0/: Cargo.toml
Solana/Trident/unchecked_arithmetic_0/programs/unchecked_arithmetic_0/src/: lib.rs
Solana/Trident/unchecked_arithmetic_0/tests/: unchecked_arithmetic_0.ts
Solana/Trident/unchecked_arithmetic_0/trident-tests/fuzz_tests/: Cargo.toml
(+5 files in other folders)
