[package]
name = "unchecked_arithmetic_0"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "unchecked_arithmetic_0"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
trident-fuzzing = ["dep:trident-fuzz"]

[dependencies]
anchor-lang = "0.30.1"

[dependencies.trident-derive-accounts-snapshots]
version = "0.0.2"

[dependencies.trident-fuzz]
version = "0.2.0"
optional = true
